Issue #SH-584 fix: google re captcha badge aligned

--- a/src/app.scss
+++ b/src/app.scss
@@ -1436,6 +1436,6 @@ ion-modal.sb-progress-loader {
   }
 }
 .grecaptcha-badge {
-   opacity:0;
-   visibility: hidden;
+   position: absolute;
+   top: 70vh;
   }
